feat: add helper service for creating responses
This commit introduces a helper service, `ServiceHelper`, to centralize the logic for creating DTO responses from domain objects. This simplifies code duplication across different service layers and promotes consistency in how responses are constructed.

The helper service provides methods for creating responses for various entities like users, reservations, rooms, room types, and utilities. It leverages Spring HATEOAS to generate self-referential links for each response.